force-app/main/default/objects/TAD_BPoint__c/TAD_BPoint__c.object-meta.xml
<CustomObject>
    <label>TAD BPoint</label>
    <nameField>
        <label>TAD BPoint Reciept</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAD BPoint</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>