force-app/main/default/objects/TAD_BPoint__c/fields/Amount_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Amount_Surcharge__c</fullName>
    <inlineHelpText>This is any surcharge amount that may be charged such as an AMEX fee. Typically this will be 0.00 for all Visa and MC payments.</inlineHelpText>
    <label>Amount Surcharge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>