force-app/main/default/objects/TAD_BPoint__c/fields/payment_transfered__c.field-meta.xml
<CustomField>
    <fullName>payment_transfered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment transfered to other order</label>
    <type>Checkbox</type>
</CustomField>