force-app/main/default/objects/TAD_BPoint__c/fields/Phone_Sale__c.field-meta.xml
<CustomField>
    <fullName>Phone_Sale__c</fullName>
    <label>Phone Sale</label>
    <referenceTo>Phone_Sale__c</referenceTo>
    <relationshipLabel>TAD BPoint</relationshipLabel>
    <relationshipName>TAD_BPoint</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>