force-app/main/default/objects/TAD_BPoint__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <description>Stores the Transaction Number for a transaction</description>
    <label>Transaction Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>